[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/ship/player/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/ship/Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/EditableHandle.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Arrow.tscn" type="PackedScene" id=4]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 2 )]
playable = true

[node name="PlayerCamera" type="Camera2D" parent="Ship"]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Ship"]
remote_path = NodePath("../../Following")
update_rotation = false

[node name="Target" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 613.352, 349.298 )

[node name="Label" type="Label" parent="Target"]
margin_right = 40.0
margin_bottom = 14.0
text = "Target"

[node name="Following" type="Node2D" parent="."]

[node name="TargetVelocity" parent="Following" instance=ExtResource( 3 )]
color = Color( 255, 227.109, 0, 1 )

[node name="VelocityArrow" parent="Following" instance=ExtResource( 4 )]

[node name="TargetdV" parent="Following" instance=ExtResource( 4 )]
color = Color( 223.125, 0, 255, 1 )

[node name="ShootVelocity" parent="Following" instance=ExtResource( 4 )]
color = Color( 0, 255, 225.117, 1 )

[node name="ForceVector" parent="Following" instance=ExtResource( 4 )]
color = Color( 0, 0.133333, 1, 1 )

[node name="Ship2" parent="." instance=ExtResource( 2 )]
position = Vector2( 132.781, 213.357 )
mass = 0.1
length = 10.0
[connection signal="input_event" from="Ship" to="." method="_on_Ship_input_event"]
